<resources>
    <string name="app_name">Healthy</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="repassword">Re-Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">Register New Account</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="app_name2">Register</string>
    <string name="app_name3">BMI</string>

    <string name="weight">Weight (kg)</string>
    <string name="btn_calculate">CALCULATE</string>
    <string name="height">Height (cm)</string>

</resources>
