<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/app_name2"
        android:textColor="#000000"
        android:textSize="26dp"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:id="@+id/textView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:padding="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">



            <EditText
        android:drawableLeft="@drawable/ic_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/user_id"
        android:ems="10"
        android:id="@+id/login_user_id" />

    <EditText
        android:id="@+id/name"
        android:drawableLeft="@drawable/ic_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/name"
        android:ems="10"/>


    <EditText
        android:drawableLeft="@drawable/ic_bd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/age"
        android:ems="10"
        android:id="@+id/age" />

    <EditText
        android:drawableLeft="@drawable/ic_lock2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="10"
        android:id="@+id/login_password" />

    <Button
        android:layout_marginTop="10dp"
        android:text="@string/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:hint="@string/password"
        />
        </LinearLayout>
    </ScrollView>

</LinearLayout>