<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">

    <TextView
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="26dp"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:id="@+id/textView" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <ImageView
        android:layout_width="236dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/foods"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/login_user_id"
        android:drawableLeft="@drawable/ic_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_id"
        android:inputType="text"/>

    <EditText
        android:id="@+id/login_password"
        android:drawableLeft="@drawable/ic_lock2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_login_btn"
        android:text="Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       />

    <TextView
        android:id="@+id/login_register_btn"
        android:layout_marginTop="10dp"
        android:textColor="#004c8c"
        android:layout_gravity="end"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"

        />

        </LinearLayout>
    </ScrollView>


</LinearLayout>